--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           experience
         </h1>
         <p>
-          a <b> FrontEnd Developer</b> Currently in Proffesional High School
+          a <b> FrontEnd Developer</b> Currently in Professional High School
           "Mehmet Isai" in Gjilan
         </p>
         <button>Connect with me</button>
