--- a/about.html
+++ b/about.html
@@ -50,10 +50,7 @@
           <img src="portfolio.jpg" alt="Photo of me" class="photo-about" />
         </div>
         <p class="p-about">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-          maxime fugit voluptatem corporis optio id quaerat provident pariatur
-          ipsam, ipsa consectetur in nemo placeat delectus nesciunt esse culpa
-          doloremque recusandae.
+          I'm Eris Uruqi,a student at the "Mehmet Isai" High School in Gjilan, I have basics knowledge with html,css,bootstrap and Javascript.
         </p>
         <a href="#" class="btn">Get in Touch</a>
       </div>
