--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
           experience
         </h1>
         <p>
-          a <b> FrontEnd Developer</b> Currently in Professional High School
-          "Mehmet Isai" in Gjilan
+          a <b> FrontEnd Developer</b> 
         </p>
         <button>Connect with me</button>
       </main>
